# satellion

./: .gitignore  BACKLOG.md  LICENSE  biome.json  index.html  package.json  pnpm-lock.yaml  react-router.config.ts  readme.md  tasks.md  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  release.yaml
.husky/: pre-commit
.markplane/: config.yaml
dist-isolation/: index.js
notes/: 2026-02-24_bitcoin_privacy_dilemma.md  2026-03-17_compromise.md  bitcoin_privacy_dilemma.md
src/: App.tsx  bindings.ts  bitcoin_sync.tsx  main.tsx  notification_overlay.tsx  root.tsx  routes.ts  shortcuts.tsx  types.ts
src-tauri/: .gitignore  .rustfmt.toml  Cargo.toml  diesel.toml  regtest.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-10-17-185427-0000_blocks/: down.sql  up.sql
src-tauri/migrations/2025-11-11-165322-0000_tokens/: down.sql  up.sql
src-tauri/migrations/2025-12-15-163304-0000_last_chain/: down.sql  up.sql
src-tauri/migrations/2025-12-18-215319-0000_migrate_wallets/: up.sql
src-tauri/migrations/2025-12-22-005347-0000_utxos/: down.sql  up.sql
src-tauri/migrations/2026-01-07-120614-0000_utxo_add_derive_path/: down.sql  up.sql
src-tauri/migrations/2026-06-15-000000_create_transactions/: down.sql  up.sql
src-tauri/src/: app_state.rs  bindings.ts  chain_trait.rs  chain_wallet.rs  codegen.rs  commands.rs  db.rs  encryptor.rs  envelope_encryption.rs  event_emitter.rs  lib.rs  main.rs  mnemonic.rs  neutrino.rs  persistence.rs  repository.rs  schema.rs  session.rs  token_tracker.rs  utils.rs  wallet.rs  wallet_keeper.rs  wallet_service.rs  wallet_storage.rs
src-tauri/src/biometric/: error.rs  keychain.rs  mod.rs  prompter.rs  unsupported.rs
src-tauri/src/bitcoin/: commands.rs  config.rs  mod.rs  neutrino.rs  wallet.rs
src-tauri/src/btc/: account.rs  address.rs  commands.rs  config.rs  event_emitter.rs  key_derivation.rs  mod.rs  neutrino.rs  service.rs  testing.md  tx_builder.rs  utxo.rs  wallet.rs
src-tauri/src/btc/neutrino/: block_downloader.rs  block_sync_worker.rs  cf_scanner.rs  commands.rs  event_emitter.rs  lifecycle.rs  mod.rs  neutrino.rs  node_listener.rs  sync_orchestrator.rs
src-tauri/src/btc/providers/: electrum_adapter.rs  esplora_adapter.rs  esplora_client.rs  mod.rs
src-tauri/src/chain/btc/: account.rs  coin_selection.rs  commands.rs  config.rs  discovery.rs  dtos.rs  fee_bump.rs  fee_estimator.rs  key_derivation.rs  mod.rs  persistence.rs  service.rs  tx_builder.rs  utxo.rs  wallet.rs
src-tauri/src/chain/btc/docs/: testing.md
src-tauri/src/chain/btc/providers/: btc_node.rs  electrum_adapter.rs  electrum_client.rs  esplora_adapter.rs  mod.rs
src-tauri/src/chain/eth/: commands.rs  config.rs  dtos.rs  erc20_retriver.rs  fee_estimator.rs  mod.rs  persistence.rs  price_feed.rs  provider.rs  token.rs  transfer_builder.rs  wallet.rs
src-tauri/src/config/: config.rs  config_impl.rs  constants.rs  mod.rs
src-tauri/src/eth/: commands.rs  config.rs  constants.rs  erc20_retriver.rs  fee_estimator.rs  init.rs  mod.rs  price_feed.rs  provider.rs  testing.md  token.rs  token_manager.rs  transfer_builder.rs  tx_builder.rs  wallet.rs
src-tauri/src/eth/constants/: mainnet.rs
src-tauri/src/ethereum/: client.rs  commands.rs  config.rs  erc20.rs  init.rs  mod.rs  price_feed.rs  provider.rs  token.rs  token_manager.rs  tx_builder.rs  wallet.rs
src-tauri/src/ethereum/constants/: mainnet.rs  mod.rs  token_symbol.rs
src-tauri/src/models/: mod.rs  wallet.rs
src-tauri/src/repository/: base_repository.rs  chain_repository.rs  mod.rs  token_repository.rs  tx_repository.rs  wallet_repository.rs
src-tauri/src/session/: chain_data.rs  chain_state.rs  mod.rs  session.rs  session_keeper.rs
src-tauri/src/system/: mod.rs  tor.rs
src-tauri/src/system/session_monitor/: macos.rs  mod.rs  triggers.rs
src-tauri/tests/: bitcoin_2e2.rs  bitcoind.rs  neutrino_e2e.rs
src-tauri/tests/mocks/: mock_chain_repository.rs  mod.rs
src/bindings/: btc.ts  (+2 more)
(+122 files in other folders)
