[package]
name = "satellion"
version = "0.1.0"
description = "Another Bitcoin light client wallet"
authors = ["Ivan Loseev"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "satellion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
tokio = "1.48.0"
futures = "0.3"
diesel = { version = "2.2.12", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "chrono"] }
r2d2 = "0.8"
chrono = "0.4.42"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
bigdecimal = "0.4.9"
once_cell = "1.21.3"
# Ethereum deps
alloy = "1.0.41"
alloy-signer-local = {version = "1.0.41", features = ["mnemonic"] }
# Bitcoin deps
bip157 = "0.3.3"
bitcoin = "0.32.7"
bip39 = "2.2.0"

